--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /* Fontes  */
 
 /* Config */
-body{
+body {
     background-color: #000423;
     margin: 0;
 }
@@ -10,58 +10,108 @@ body{
     font-size: 62.5%;
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+    height: 3px;
+}
+
+::-webkit-scrollbar-track {
+    background: none; 
+    border-radius: 10px; 
+}
+
+::-webkit-scrollbar-thumb {
+    background: #FFFFFF;
+    border-radius: 10px; 
+}
+
 
 /* header  */
 
-header{
-color: #FFFFFF;
-display: flex;
-gap: 1rem;
-margin-left: 1rem;
-align-items: center;
+header {
+    color: #FFFFFF;
+    display: flex;
+    gap: 1rem;
+    margin-left: 1rem;
+    align-items: center;
 }
 
-#img1-header{
+#img1-header {
     width: 2.5rem;
 }
 
-#img2-header{
+#img2-header {
     width: 3.5rem;
 }
 
-header h1{
+header h1 {
     font-size: 2rem;
     font-family: "Montserrat", serif;
 }
 
-header a{
+header h1:hover{
+    color: #FCFC30;
+}
+
+header span{
+    color: #FFFFFF;
+    font-size: 2rem;
+}
+
+header a {
     text-decoration: none;
     color: #FFFFFF;
     font-size: 1.5rem;
     font-family: "Montserrat", serif;
+    position: relative;
     margin-left: 0.5rem;
 }
 
 hr {
-    border: none; 
+    border: none;
     height: 0.5rem;
-    background-color: #FCFC30; 
-    margin: 0; 
+    background-color: #FCFC30;
+    margin: 0;
 }
 
-/* pagina de upload  */
-.page-upload{
-    margin-top: 10rem;
+header a:hover {
+    color: #FCFC30;
+}
+
+header a::after {
+    content: '';
+    position: absolute;
+    left: 70%;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: #FCFC30;
+    transition: width 0.4s ease, left 0.3s ease;
+}
+
+header a:hover::after {
+    left: 0;
+    width: 100%;
+}
+
+/* pagina principal de upload  */
+.page-upload {
     margin-left: 5rem;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.titulo h1{
+.informacoes{
+    margin-top: 10rem;
+}
+
+.titulo h1 {
     color: #FCFC30;
     font-size: 3rem;
     font-family: "Montserrat", serif;
 }
 
-.descricao h1{
+.descricao h1 {
     color: #FFFFFF;
     font-size: 2rem;
     width: 60rem;
@@ -69,11 +119,11 @@ hr {
     font-family: "Montserrat", serif;
 }
 
-.descricao h1 span{
+.descricao h1 span {
     color: #FCFC30;
 }
 
-form{
+form {
     display: inline-block;
     justify-content: center;
     align-items: center;
@@ -92,15 +142,85 @@ input[type="file"] {
     cursor: pointer;
     display: block;
     width: 30rem;
+    transition: 1s;
     height: 15rem;
 }
 
-form button{
+input[type="file"]:hover{
+    border: 2px solid #467DC3;
+}
+
+form button {
     width: 32.5rem;
     color: #ffff00;
     background-color: #467DC3;
     height: 3rem;
     border-radius: 0.8rem;
+    transition: 0.5s;
     border: none;
     font-family: "Montserrat", serif;
+}
+
+form button:hover{
+    background-color: #FCFB2F;
+    color: #000423;
+}
+
+.img-principal img {
+    width: 60rem;
+}
+
+/* parte do rodapé */
+
+footer {
+    background-color: #FCFB2F;
+    height: 5rem;
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.infomacoes-footer h1{
+    font-family: "Montserrat", serif;
+    font-weight: 400;
+    font-size: 1.3rem;
+    display: flex;
+    align-items: center;
+    color: #000423;
+}
+
+.termos-e-responsabilidades{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.termos-e-responsabilidades img{
+    width: 2rem;
+    height: 2rem;
+}
+
+.termos-e-responsabilidades h1{
+    font-family: "Montserrat", serif;
+    font-weight: 400;
+    font-size: 1.3rem;
+    color: #000423;
+}
+
+.Código-de-Ética-e-Normas-de-Conduta{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.Código-de-Ética-e-Normas-de-Conduta img{
+    width: 2rem;
+    height: 2rem;
+}
+
+.Código-de-Ética-e-Normas-de-Conduta h1{
+    font-family: "Montserrat", serif;
+    font-weight: 400;
+    font-size: 1.3rem;
+    color: #000423;
 }
