--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,6 @@ body {
 
 
 /* header  */
-
 header {
     color: #FFFFFF;
     display: flex;
@@ -36,26 +35,24 @@ header {
     align-items: center;
 }
 
-#img1-header {
-    width: 2.5rem;
+#img1-header{
+padding: 0;
 }
 
-#img2-header {
+#img1-header img{
     width: 3.5rem;
+    z-index: 1;
 }
 
 header h1 {
     font-size: 2rem;
     font-family: "Montserrat", serif;
+    padding: 0;
+    z-index: 1;
 }
 
 header h1:hover{
     color: #FCFC30;
-}
-
-header span{
-    color: #FFFFFF;
-    font-size: 2rem;
 }
 
 header a {
@@ -63,8 +60,6 @@ header a {
     color: #FFFFFF;
     font-size: 1.5rem;
     font-family: "Montserrat", serif;
-    position: relative;
-    margin-left: 0.5rem;
 }
 
 hr {
@@ -74,24 +69,101 @@ hr {
     margin: 0;
 }
 
-header a:hover {
+/*menu-hamburguer */
+.off-screen-menu {
+    background-color: #012244;
+    z-index: 2;
+    height: 100vh;
+    width: 30rem;
+    position: fixed;
+    top: 0;
+    right: -450px;
+    display: flex;
+    font-size: 1rem;
+    transition: .3s ease;
+}
+
+.off-screen-menu ul {
+    list-style-type: none;
+    margin-top: 5rem;
+    width: 100%;
+}
+
+.off-screen-menu li {
+    width: 100%;
+}
+
+.off-screen-menu a {
+    display: block;
+    padding: 20px;
+    align-items: center;
+    color: #FFFFFF;
+    text-decoration: none;
+    text-align:left;
+}
+
+.off-screen-menu a:hover {
     color: #FCFC30;
 }
 
-header a::after {
-    content: '';
-    position: absolute;
-    left: 70%;
-    bottom: 0;
-    width: 0;
-    height: 2px;
+.divisor-menu {
+    width: 100%;
+    height: 8px;
     background-color: #FCFC30;
-    transition: width 0.4s ease, left 0.3s ease;
+    
 }
 
-header a:hover::after {
+.off-screen-menu.active {
     left: 0;
-    width: 100%;
+}
+
+.ham-menu {
+    height: 40px;
+    width: 40px;
+    transition: 1s;
+    z-index: 3;
+    padding: 0;
+    position: relative;
+}
+
+.ham-menu span:hover{
+    background-color: #FCFC30;
+}
+
+.ham-menu span {
+    height: 4px;
+    width: 90%;
+    background-color: #FFFFFF;
+    border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .3s ease;
+}
+
+.ham-menu span:nth-child(1) {
+    top: 25%;
+}
+
+.ham-menu span:nth-child(3) {
+    top: 75%;
+}
+
+.ham-menu.active span:nth-child(1) {
+    background-color: #FCFC30;
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.ham-menu.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.ham-menu.active span:nth-child(3) {
+    background-color: #FCFC30;
+    top: 40%;
+    transform: translate(-50%, 50%) rotate(-45deg);
 }
 
 /* pagina principal de upload  */
@@ -121,6 +193,10 @@ header a:hover::after {
 
 .descricao h1 span {
     color: #FCFC30;
+}
+
+.img-principal img {
+    width: 60rem;
 }
 
 form {
@@ -166,9 +242,6 @@ form button:hover{
     color: #000423;
 }
 
-.img-principal img {
-    width: 60rem;
-}
 
 /* parte do rodapé */
 
