--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/index.css"> <!--Pasta css-->
-    <link rel="stylesheet" href="./css/responsividade-mobile.css"> <!--Pasta de responsividade-->
+    <link rel="stylesheet" href="./static/css/index.css"> <!--Pasta css-->
+    <link rel="stylesheet" href="./static/css/responsividade-mobile.css"> <!--Pasta de responsividade-->
     <title>TechDoc</title>
 </head>
 
@@ -33,7 +33,7 @@
             </div>
             
             <!--Logo do BB e nome da Aplicação-->
-            <img id="img1-header" src="./Imagens/header/Imagem15 1.png" alt="">
+            <img id="img1-header" src="./static/Imagens/header/Imagem15 1.png" alt="">
             <h1>TechDoc</h1>
     </header>
     <hr>
@@ -53,17 +53,21 @@
                 </div>
             </div>
 
-            <form action="/uploadfile/" method="post" enctype="multipart/form-data"> <!--Parte onde será mandada os arquivos para digitalizar-->
-                <input required type="file" name="file" accept="image/*,.pdf"><br>
-                <button type="submit">UPLOAD</button> <!--Botão para mandar a aplicação-->
+            <form action="/upload" method="post" enctype="multipart/form-data"> <!--Onde upa os documentos-->
+                <label for="file"></label>
+                <input type="file" id="file" name="file" accept=".png, .jpg, .jpeg, .pdf" multiple required><br><br>
+        
+                <label for="message"></label> <!--Onde se escreve o que quer-->
+                <textarea id="message" name="message" placeholder="O que deseja procurar?" required></textarea><br><br>
+        
+                <button type="submit">Enviar</button>
             </form>
         </div>
 
         <div class="img-principal">
-            <img src="./Imagens/pg-principal/img pg-principal.png" alt=""> <!--Imagem de fundo do site-->
+            <img src="./static/Imagens/pg-principal/img pg-principal.png" alt=""> <!--Imagem de fundo do site-->
         </div>
     </section>
-
     <footer> <!--Rodape com algumas informações-->
         <div class="infomacoes-footer">
             <h1>© Banco do Brasil S/A - CNPJ 00.000.000/0001-91 SAUN QD 5 LT <br>B, Asa Norte, Brasília-DF, Brasil - CEP
@@ -71,19 +75,19 @@
         </div>
 
         <div class="termos-e-responsabilidades">
-            <img src="./Imagens/footer/img-termos e responsabilidades.png" alt="">
+            <img src="./static/Imagens/footer/img-termos e responsabilidades.png" alt="">
             <h1>Termo de Responsabilidade</h1>
         </div>
 
         <div class="Código-de-Ética-e-Normas-de-Conduta">
-            <img src="./Imagens/footer/codigo de etica.png" alt="">
+            <img src="./static/Imagens/footer/codigo de etica.png" alt="">
             <h1>Código de Ética e Normas de Conduta</h1>
             <hr class="linha-footer">
         </div>
     </footer>
 
     <!--Parte dos scripts do site-->
-    <script src="./Js/hamburguer.js"></script>  <!--Script do menu hamburguer-->
+    <script src="./static/Js/hamburguer.js"></script>  <!--Script do menu hamburguer-->
 </body>
 
 </html>
