--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./static/css/index.css"> <!--Pasta css-->
-    <link rel="stylesheet" href="./static/css/responsividade-mobile.css"> <!--Pasta de responsividade-->
+    <link rel="stylesheet" href="../static/css/index.css"> <!--Pasta css-->
+    <link rel="stylesheet" href="../static/css/responsividade-mobile.css"> <!--Pasta de responsividade-->
     <title>TechDoc</title>
 </head>
 
@@ -33,7 +33,7 @@
             </div>
             
             <!--Logo do BB e nome da Aplicação-->
-            <img id="img1-header" src="./static/Imagens/header/Imagem15 1.png" alt="">
+            <img id="img1-header" src="../static/Imagens/header/Imagem15 1.png" alt="">
             <h1>TechDoc</h1>
     </header>
     <hr>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="img-principal">
-            <img src="./static/Imagens/pg-principal/img pg-principal.png" alt=""> <!--Imagem de fundo do site-->
+            <img src="../static/Imagens/pg-principal/img pg-principal.png" alt=""> <!--Imagem de fundo do site-->
         </div>
     </section>
     <footer> <!--Rodape com algumas informações-->
@@ -75,19 +75,19 @@
         </div>
 
         <div class="termos-e-responsabilidades">
-            <img src="./static/Imagens/footer/img-termos e responsabilidades.png" alt="">
+            <img src="../static/Imagens/footer/img-termos e responsabilidades.png" alt="">
             <h1>Termo de Responsabilidade</h1>
         </div>
 
         <div class="Código-de-Ética-e-Normas-de-Conduta">
-            <img src="./static/Imagens/footer/codigo de etica.png" alt="">
+            <img src="../static/Imagens/footer/codigo de etica.png" alt="">
             <h1>Código de Ética e Normas de Conduta</h1>
             <hr class="linha-footer">
         </div>
     </footer>
 
     <!--Parte dos scripts do site-->
-    <script src="./static/Js/hamburguer.js"></script>  <!--Script do menu hamburguer-->
+    <script src="../static/Js/hamburguer.js"></script>  <!--Script do menu hamburguer-->
 </body>
 
 </html>
