--- a/templates/result.html
+++ b/templates/result.html
@@ -1,15 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultado do OCR</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  <!-- fontes usadas -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="../static/css/result.css"> <!--Pasta css-->
+    <link rel="stylesheet" href="../static/css/responsividade-mobile.css"> <!--Pasta de responsividade-->
+    
+    <title>Resultado</title>
 </head>
 
-<body> <!--Pagina onde mostra os resultados-->
-    <h1>Informações Solicitadas</h1>
-    <p>{{ result }}</p> <!--Onde é mostrado o resultado-->
-</body>
+<body> 
 
+    <header>
+        <div class="off-screen-menu"> <!--Menu de navegação na forma hamburguer, quando é ativado-->
+            <ul>
+                <li><a href="#digitalizar">Digitalizar</a></li>
+                <li><a href="#ajuda">Ajuda</a></li>
+                <li><a href="#termo">Termo de Responsabilidade</a></li>
+                <li><a href="#normas">Código de Ética e Normas de Conduta</a></li>
+                </ul>
+            </div>
+
+            <div class="ham-menu"> <!--Botão para ativar o menu hamburguer-->
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            
+            <!--Logo do BB e nome da Aplicação-->
+            <img id="img1-header" src="../static/Imagens/header/Imagem15 1.png" alt="">
+            <h1>TechDoc</h1>
+    </header>
+    
+    <hr> <!-- Linha horizontal para separar o cabeçalho -->
+
+    <section class="fundo-azul">
+        <!-- Cabeçalho da seção de resultados -->
+        <div class="resultados-header">
+            <h1> <img src="../static/Imagens/result/li_file-search.png" alt="file-search">Resultados </h1>
+        </div>
+
+        <!-- Caixa de busca, onde o usuário pode digitar uma nova pesquisa -->
+        <div class="caixa-texto">
+            <input type="text" placeholder="Precisa de algo mais?">
+            <button class="input-button"> <img src="../static/Imagens/result/li_arrow-right.png" alt="li-arrow"> </button>
+        </div>
+    
+        <!-- Título informativo -->
+        <div class="titulo-info">
+            <img src="../static/Imagens/result/li_info@2x.png" alt="imagem informação">
+            <h2>Resumo das Informações</h2>
+        </div>
+   
+        <!-- Área onde o resultado das informações aparecerá -->
+        <div class="info-documento">
+            <!--<p>{{ result }}</p> --> 
+        </div>
+
+        <!-- Botões -->
+        <div class="botoes">
+            <button id="adicionar-doc"> <img src="../static/Imagens/result/li_plus.png" alt="">Adicionar Documento</button>
+            <button id="nova-pesquisa">Nova Pesquisa <img src="../static/Imagens/result/li_arrow-right.png" alt=""></button>
+            <button id="sair"> <img src="../static/Imagens/result/li_x.png" alt="">Sair</button>
+        </div>
+    </section>  
+
+    <footer> <!--Rodape com algumas informações-->
+        <div class="infomacoes-footer">
+            <h1>© Banco do Brasil S/A - CNPJ 00.000.000/0001-91 SAUN QD 5 LT <br>B, Asa Norte, Brasília-DF, Brasil - CEP
+                70040-911</h1>
+        </div>
+
+        <div class="termos-e-responsabilidades">
+            <img src="../static/Imagens/footer/img-termos e responsabilidades.png" alt="">
+            <h1>Termo de Responsabilidade</h1>
+        </div>
+
+        <div class="Código-de-Ética-e-Normas-de-Conduta">
+            <img src="../static/Imagens/footer/codigo de etica.png" alt="">
+            <h1>Código de Ética e Normas de Conduta</h1>
+            <hr class="linha-footer">
+        </div>
+    </footer>
+
+    <script src="../static/Js/hamburguer.js"></script>  <!--Script do menu hamburguer-->
+
+  </body>
 </html>
