--- a/static/css/index.css
+++ b/static/css/index.css
@@ -268,6 +268,9 @@ footer {
     display: flex;
     justify-content: space-evenly;
     text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .infomacoes-footer h1{
