--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,9 +1,27 @@
 /* Fontes  */
+@font-face {
+    font-family: 'BancoDoBrasilTextos';
+    src: url('../font/BancoDoBrasilTextos-Bold.ttf') format('truetype');
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: 'BancoDoBrasilTextos';
+    src: url('../font/BancoDoBrasilTextos-Medium.ttf') format('truetype');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'BancoDoBrasilTextos';
+    src: url('../font/BancoDoBrasilTextos-Regular.ttf') format('truetype');
+    font-weight: normal;
+}
 
 /* Config */
 body {
     background-color: #000423;
     margin: 0;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
 }
 
 :root {
@@ -46,7 +64,7 @@ padding: 0;
 
 header h1 {
     font-size: 2rem;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     padding: 0;
     z-index: 1;
 }
@@ -59,7 +77,7 @@ header a {
     text-decoration: none;
     color: #FFFFFF;
     font-size: 1.5rem;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
 }
 
 hr {
@@ -180,7 +198,7 @@ hr {
 .titulo h1 {
     color: #FCFC30;
     font-size: 3rem;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
 }
 
 .descricao h1 {
@@ -188,7 +206,7 @@ hr {
     font-size: 2rem;
     width: 60rem;
     font-weight: 200;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
 }
 
 .descricao h1 span {
@@ -214,7 +232,7 @@ input[type="file"] {
     border-radius: 5px;
     padding: 10px;
     color: #FCFC30;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     cursor: pointer;
     display: block;
     width: 30rem;
@@ -234,7 +252,7 @@ form button {
     border-radius: 0.8rem;
     transition: 0.5s;
     border: none;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
 }
 
 form button:hover{
@@ -249,7 +267,7 @@ form button:hover{
     border-radius: 5px;
     background-color: transparent;
     color: #FCFC30;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     padding: 0.5rem;
 }
 
@@ -274,7 +292,7 @@ footer {
 }
 
 .infomacoes-footer h1{
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     font-weight: 400;
     font-size: 1.3rem;
     display: flex;
@@ -294,7 +312,7 @@ footer {
 }
 
 .termos-e-responsabilidades h1{
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     font-weight: 400;
     font-size: 1.3rem;
     color: #000423;
@@ -312,7 +330,7 @@ footer {
 }
 
 .Código-de-Ética-e-Normas-de-Conduta h1{
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     font-weight: 400;
     font-size: 1.3rem;
     color: #000423;
