--- a/static/css/result.css
+++ b/static/css/result.css
@@ -1,3 +1,22 @@
+/* Fontes  */
+@font-face {
+    font-family: 'BancoDoBrasilTextos';
+    src: url('../font/BancoDoBrasilTextos-Bold.ttf') format('truetype');
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: 'BancoDoBrasilTextos';
+    src: url('../font/BancoDoBrasilTextos-Medium.ttf') format('truetype');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'BancoDoBrasilTextos';
+    src: url('../font/BancoDoBrasilTextos-Regular.ttf') format('truetype');
+    font-weight: normal;
+}
+
 /*Config*/
 body {
     background-color: #000423;
@@ -45,7 +64,7 @@ header {
     
 header h1 {
     font-size: 2rem;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     padding: 0;
     z-index: 1;
 }
@@ -58,7 +77,7 @@ header a {
     text-decoration: none;
     color: #FFFFFF;
     font-size: 1.5rem;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
 }
 
 hr {
@@ -178,7 +197,7 @@ hr {
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     font-size: 2.4rem;
     text-align:left;
     margin-bottom: 40px;
@@ -198,7 +217,7 @@ hr {
 
 .titulo-info h2 {
     font-size: 1.8rem;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     margin: 0;
     
 }
@@ -224,7 +243,7 @@ hr {
 }
 
 .info-documento p{
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     font-size: 1.5rem;
 }
 
@@ -310,7 +329,7 @@ input:focus {
     border: none;
     border-radius: 0.4rem;
     cursor: pointer;
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     font-size: 1.6rem;
 }
 
@@ -337,7 +356,7 @@ footer {
 }
 
 .infomacoes-footer h1{
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     font-weight: 400;
     font-size: 1.3rem;
     display: flex;
@@ -359,7 +378,7 @@ footer {
 }
 
 .termos-e-responsabilidades h1{
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     font-weight: 400;
     font-size: 1.3rem;
     color: #000423;
@@ -378,7 +397,7 @@ footer {
 }
 
 .Código-de-Ética-e-Normas-de-Conduta h1{
-    font-family: "Montserrat", serif;
+    font-family: 'BancoDoBrasilTextos', sans-serif;
     font-weight: 400;
     font-size: 1.3rem;
     color: #000423;
