--- a/templates/ajuda.html
+++ b/templates/ajuda.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/index.css">
     <link rel="stylesheet" href="../static/css/ajuda.css">
     <title>Ajuda - TechDoc</title>
@@ -39,8 +37,8 @@
     <section class="carrossel">
         <img src="../static/Imagens/carrossel/imagem-carrossel.png" alt="Carrossel">
         <div class="carrossel-content">
-            <h2 class="carrossel-title">Precisa de Ajuda?</h2>
-            <p class="carrossel-description">Aqui você encontra respostas para as principais dúvidas sobre a nossa ferramenta de digitalização</p>
+            <h2 class="carrossel-title">Precisa de<br></br>ajuda?</h2>
+            <p class="carrossel-description">Aqui você encontra respostas para as<br></br>principais dúvidas sobre a nossa<br></br>ferramenta de digitalização</p>
         </div>
     </section>
 
