--- a/static/css/ajuda.css
+++ b/static/css/ajuda.css
@@ -165,15 +165,29 @@ hr {
 }
 
 .arrow {
-    font-size: 2rem;
-    transition: transform 0.3s ease;
+    font-size: 2rem; 
     color: #FCFC30;
+    transition: transform 0.3s ease;
+    font-family: 'Font Awesome 5 Free', sans-serif;
+    font-weight: 900;
+    display: inline-block;
 }
+
+.faq-item .arrow::before {
+    content: "\f078";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+}
+
+.faq-item.active .arrow {
+    transform: rotate(180deg);
+}
+
 
 .faq-answer {
     display: none;
     padding: 1rem 0;
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     line-height: 1.4;
     color: #D3D3D3;
 }
