ajuste nas rotas do menu

--- a/templates/ajuda.html
+++ b/templates/ajuda.html
@@ -14,8 +14,8 @@
     <header>
         <div class="off-screen-menu"> <!--Menu de navegação na forma hamburguer, quando é ativado-->
             <ul>
-                <li><a href="#digitalizar">Digitalizar</a></li>
-                <li><a href="#ajuda">Ajuda</a></li>
+                <li><a href="index.html">Digitalizar</a></li>
+                <li><a href="ajuda.html">Ajuda</a></li>
                 <li><a href="#termo">Termo de Responsabilidade</a></li>
                 <li><a href="#normas">Código de Ética e Normas de Conduta</a></li>
                 </ul>
