--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
 
-            <form action="/upload" method="post" enctype="multipart/form-data"> <!--Onde upa os documentos-->
+            <form id="uploadForm" enctype="multipart/form-data"> <!--Onde upa os documentos-->
                 <label for="file"></label>
                 <input type="file" id="file" name="file" accept=".png, .jpg, .jpeg, .pdf" multiple required><br><br>
         
@@ -82,6 +82,7 @@
 
     <!--Parte dos scripts do site-->
     <script src="../static/Js/hamburguer.js"></script>  <!--Script do menu hamburguer-->
+    <script src="../static/Js/sendToScanner.js"></script> <!--Script para enviar para o back informações-->
 </body>
 
 </html>
