--- a/templates/result.html
+++ b/templates/result.html
@@ -83,7 +83,7 @@
     </footer>
 
     <script src="../static/Js/hamburguer.js"></script> <!--Script do menu hamburguer-->
-
+    <script src="../static/Js/scannerResult.js"></script> <!--Script para receber o resultado do back-->
 </body>
 
 </html>
