--- a/frontend/css/result.css
+++ b/frontend/css/result.css
@@ -353,6 +353,9 @@ footer {
     display: flex;
     justify-content: space-evenly;
     text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .infomacoes-footer h1{
